--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -6,12 +6,14 @@
   <link rel="stylesheet" type="text/css" href="lib/jasmine-1.0.0/jasmine.css">
   <script type="text/javascript" src="lib/jasmine-1.0.0/jasmine.js"></script>
   <script type="text/javascript" src="lib/jasmine-1.0.0/jasmine-html.js"></script>
+  <script type="text/javascript" src="src/underscore/underscore-min.js"></script>
+
 
   <!-- source files -->
 
-  <script type="text/javascript" src="src/linkedList.js"></script>
-    <!-- 
   <script type="text/javascript" src="src/tree.js"></script>
+    <!-- 
+  <script type="text/javascript" src="src/linkedList.js"></script>
   <script type="text/javascript" src="src/set.js"></script>
   <script type="text/javascript" src="src/hashTable.js"></script>
   <script type="text/javascript" src="src/hashTableHelpers.js"></script>
@@ -21,9 +23,10 @@
   <!-- <script type="text/javascript" src="src/binarySearchTree.js"></script> -->
 
   <!-- spec files -->
-  <script type="text/javascript" src="spec/linkedListSpec.js"></script>
-  <!--
   <script type="text/javascript" src="spec/treeSpec.js"></script>
+  <!--
+
+  <script type="text/javascript" src="spec/linkedListSpec.js"></script>
   <script type="text/javascript" src="spec/setSpec.js"></script>
   <script type="text/javascript" src="spec/hashTableSpec.js"></script>
   -->
