--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -9,26 +9,23 @@
   <script type="text/javascript" src="src/underscore/underscore-min.js"></script>
 
 
-  <!-- source files -->
+  <!-- source files
   <script type="text/javascript" src="src/hashTable.js"></script>
   <script type="text/javascript" src="src/hashTableHelpers.js"> </script>
   <script type="text/javascript" src="src/linkedList.js"></script>
   <script type="text/javascript" src="src/tree.js"></script>
   <script type="text/javascript" src="src/set.js"></script>
-  -->
+  <script type="text/javascript" src="src/set.js"></script> -->
 
-  <!-- Extra credit: -->
-  <!-- <script type="text/javascript" src="src/binarySearchTree.js"></script> -->
+  <script type="text/javascript" src="src/binarySearchTree.js"></script>
 
-  <!-- spec files -->
+  <!-- spec files
   <script type="text/javascript" src="spec/hashTableSpec.js"></script>
   <script type="text/javascript" src="spec/treeSpec.js"></script>
   <script type="text/javascript" src="spec/linkedListSpec.js"></script>
   <script type="text/javascript" src="spec/setSpec.js"></script>
   -->
-
-  <!-- Extra credit: -->
-  <!-- <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script> -->
+  <script type="text/javascript" src="spec/binarySearchTreeSpec.js"></script>
 
 </head>
 <body>
